<resources>
    <string name="app_name">Ampflow</string>

    <string name="enable_switch">Enabled</string>
    <string name="enable_disable">Shows or hides the notification icon</string>
    
    <string name="lock_screen_title">Publicly visible</string>
    <string name="lock_screen_summary">Show the notification in the lockscreen when the device is locked</string>
    
    <string name="low_power_title">Disable on low battery</string>
    <string name="low_power_summary">Disable the notification and the service when the device\'s battery is low or when the power saving mode is enabled</string>

    <string name="percent_format">%d%%</string>
    <string name="battery_capacity_format">%.2f mAh</string>
    <string name="current_format">%.0f mA</string>

    <string name="charging_fast">Charging rapidly (%s)</string>
    <string name="charging_slow">Charging slowly (%s)</string>
    <string name="discharging_slow">Discharging slowly (%s)</string>
    <string name="discharging_fast">Discharging rapidly (%s)</string>
    <string name="battery_health_cold">Cold</string>
    <string name="battery_health_dead">Dead</string>
    <string name="battery_health_good">Good</string>
    <string name="battery_health_overheat">Overheat</string>
    <string name="battery_health_over_voltage">Over voltage</string>
    <string name="battery_health">Health: %s</string>
    <string name="battery_power_ac">AC</string>
    <string name="battery_power_usb">USB</string>
    <string name="battery_power_wireless">Wireless</string>
    <string name="charging_wireless">Charging (%s)</string>
    <string name="unknown">Unknown</string>
</resources>